; ModuleID = '/home/carl/AnghaBench/esp-idf/components/esp_gdbstub/esp32s2beta/extr_gdbstub_esp32s2beta.c_esp_gdbstub_getchar.c'
source_filename = "/home/carl/AnghaBench/esp-idf/components/esp_gdbstub/esp32s2beta/extr_gdbstub_esp32s2beta.c_esp_gdbstub_getchar.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@UART_NUM = common dso_local global i32 0, align 4
@UART_RXFIFO_CNT = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @esp_gdbstub_getchar() #0 {
  br label %1

1:                                                ; preds = %7, %0
  %2 = load i32, i32* @UART_NUM, align 4
  %3 = call i32 @UART_STATUS_REG(i32 %2)
  %4 = load i32, i32* @UART_RXFIFO_CNT, align 4
  %5 = call i64 @REG_GET_FIELD(i32 %3, i32 %4)
  %6 = icmp eq i64 %5, 0
  br i1 %6, label %7, label %8

7:                                                ; preds = %1
  br label %1

8:                                                ; preds = %1
  %9 = load i32, i32* @UART_NUM, align 4
  %10 = call i32 @UART_FIFO_AHB_REG(i32 %9)
  %11 = call i32 @REG_READ(i32 %10)
  ret i32 %11
}

declare dso_local i64 @REG_GET_FIELD(i32, i32) #1

declare dso_local i32 @UART_STATUS_REG(i32) #1

declare dso_local i32 @REG_READ(i32) #1

declare dso_local i32 @UART_FIFO_AHB_REG(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
